set02/problem05_compile_errors.txt
Compilation started at 2/4/2024, 1:33:33 PM
Compilation finished at 2/4/2024, 1:33:33 PM
Compilation started at 2/4/2024, 1:34:16 PM
Compilation finished at 2/4/2024, 1:34:17 PM
Compilation started at 2/6/2024, 1:52:43 PM
Compilation finished at 2/6/2024, 1:52:44 PM
Compilation started at 3/1/2024, 1:47:59 PM
Compilation finished at 3/1/2024, 1:48:00 PM
Compilation started at 3/1/2024, 1:48:35 PM
Compilation finished at 3/1/2024, 1:48:35 PM
Compilation started at 3/1/2024, 1:48:50 PM
Compilation finished at 3/1/2024, 1:48:51 PM
Compilation started at 3/1/2024, 1:49:18 PM
Compilation finished at 3/1/2024, 1:49:18 PM
Compilation started at 3/1/2024, 2:37:15 PM
c:\Users\Dell\c_activity_sets\set02\problem05.c: In function 'main':
c:\Users\Dell\c_activity_sets\set02\problem05.c:16:14: error: expected expression before '.' token
     return 0;.
              ^
Compilation finished at 3/1/2024, 2:37:16 PM
Compilation started at 3/1/2024, 2:37:32 PM
c:\Users\Dell\c_activity_sets\set02\problem05.c: In function 'main':
c:\Users\Dell\c_activity_sets\set02\problem05.c:16:14: error: expected expression before '.' token
     return 0;.
              ^
Compilation finished at 3/1/2024, 2:37:32 PM
Compilation started at 3/1/2024, 2:38:00 PM
c:\Users\Dell\c_activity_sets\set02\problem05.c: In function 'main':
c:\Users\Dell\c_activity_sets\set02\problem05.c:16:14: error: expected expression before '.' token
     return 0;.
              ^
Compilation finished at 3/1/2024, 2:38:01 PM
